Added ingredients list and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,19 @@
 	</head>
 	<body>
 		<h1>Lasagna</h1>
+		<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F1667789214920IMG_20221106_212558.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+		<p>This is a delicious lasagna. It's so good. You should make it.</p>
+		<h2>Here's what you'll need:</h2>
+		<ul>
+			<li>cheese</li>
+			<li>tomatoes</li>
+			<li>pasta</li>
+		</ul>
+		<h2>Here's how to make it:</h2>
+		<ol>
+			<li>gather your ingredients</li>
+			<li>...?</li>
+			<li>profit</li>
+		</ol>
 	</body>
 </html>
